2021-09-01  Petasis George  <petasis@iit.demokritos.gr>
        * library/tkdnd_utils.tcl: Fixed bug #55.
        * CMakeLists.txt: Fix so as a correct pkgIndex.tcl is generated (by
        reading pkgIndex.tcl.in).

2020-09-19  Petasis George  <petasis@iit.demokritos.gr>
        * configure:
        * configure.ac: Added flag -static-libstdc++ when building with gcc
        under Windows.

        * .appveyor.yml: Build also with MSYS2 under Windows.
        * appveyor_build_msys2.sh: Build script for MSYS2.

2020-08-19  Petasis George  <petasis@iit.demokritos.gr>
        * library/tkdnd_unix.tcl: Fixed bug #40.

        * pkgIndex.tcl.in:
        * CMakeLists.txt:
        * library/tkdnd.tcl: Added the option for enabling debug messages
        through the global variable ::TKDND_DEBUG_LEVEL (before loading the
        package).

2020-08-18  Petasis George  <petasis@iit.demokritos.gr>
        * .travis.yml: Added installation of libxcursor1 and libxcursor-dev.

        * configure.ac: Added checks for lib Xcursor.

        * library/tkdnd_generic.tcl: Fixed bug #44, where "string is entier"
        may not be available.

        * library/tkdnd_generic.tcl: Fixed bug #43, renamed
        ::tkdnd::platform_independent_types to
        generic::platform_independent_types.

2020-03-03  Petasis George  <petasis@iit.demokritos.gr>
        * CMakeLists.txt:
        * configure.ac:
        * unix/Cursors.c: Corrections in build system and fixed some warnings
        under unix.

2020-02-23  Petasis George  <petasis@iit.demokritos.gr>
        * demos/custom_cursors.tcl:
        * demos/cursors: Added a demo script for shwoing the interface for
        custom cursors.

        * generic/*: Moved cursor utilities from unix to the generic folder.
        * unix/Cursors.c: TkDND_GetCursor moved in generic.
        Added support for custom cursors.

2019-07-15  Petasis George  <petasis@iit.demokritos.gr>